--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h1> Agro e a Economia Brasileira</h1>
         <div class="image-container">
             <img src="agro-nao-para-1.jpg"
+             <img src=""
                 alt="Foto das Cataratas do Iguaçu, um lugar com muitas árvores e mata nativa preservada.">
         </div>
         <p>O desmatamento intensifica fenômenos negativos no meio ambiente e na vida das pessoas, afetando enchentes, temperatura e qualidade de vida.</p>
