--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
              <img src="BRASIL-COLHEITA-.webp"
                 alt="Foto das Cataratas do Iguaçu, um lugar com muitas árvores e mata nativa preservada.">
         </div>
-        <p>O desmatamento intensifica fenômenos negativos no meio ambiente e na vida das pessoas, afetando enchentes, temperatura e qualidade de vida.</p>
+        <p>O agronegócio (ou "agro") é um dos pilares da economia brasileira, sendo responsável por uma parcela significativa do PIB, das exportações e da geração de empregos. Abaixo, explico como o agro influencia a economia do Brasil de maneira ampla:</p>
         <nav>
             <ul>
-                <li><a href="#problemas">Os Problemas</a></li>
+                <li><a href="🌾 Panorama Atual do Agronegócio Brasileiro (2025)">Panorama</a></li>
                 <li><a href="#consequencias">Consequências</a></li>
                 <li><a href="#conclusao">Conclusão</a></li>
             </ul>
@@ -31,8 +31,8 @@
 
 
     <main>
-        <section id="problemas" class="conteudo">
-            <h2>Os Problemas</h2>
+        <section id="🌾 Panorama do Agronegócio Brasileiro (2024)" class="conteudo">
+            <h2>Panorama</h2>
             <article>
                 <h3>Aumento das enchentes</h3>
                 <p>As árvores absorvem a água da chuva e ajudam na infiltração no solo. Sem vegetação, a água escoa rapidamente, causando
