--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
              <img src="BRASIL-COLHEITA-.webp"
                 alt="Foto das Cataratas do Iguaçu, um lugar com muitas árvores e mata nativa preservada.">
         </div>
-        <p>O agronegócio (ou "agro") é um dos pilares da economia brasileira, sendo responsável por uma parcela significativa do PIB, das exportações e da geração de empregos. Abaixo, explico como o agro influencia a economia do Brasil de maneira ampla:</p>
+        <p>O agronegócio (ou "agro") é um dos pilares da economia brasileira, sendo responsável por uma parcela significativa do PIB, das exportações e da geração de empregos. 
+        Abaixo, explico como o agro influencia a economia do Brasil de maneira ampla:</p>
         <nav>
             <ul>
                 <li><a href="🌾 Panorama Atual do Agronegócio Brasileiro (2025)">Panorama</a></li>
@@ -37,18 +38,6 @@
                 <h3>Aumento das enchentes</h3>
                 <p>As árvores absorvem a água da chuva e ajudam na infiltração no solo. Sem vegetação, a água escoa rapidamente, causando
                     enchentes.</p>
-            </article>
-
-            <article>
-                <h3>Calor excessivo e ilhas de calor</h3>
-                <p>O desmatamento reduz a evapotranspiração das plantas, elevando a temperatura das cidades e aumentando o efeito das ilhas
-                    de calor.</p>
-            </article>
-
-            <article>
-                <h3>Redução da qualidade de vida</h3>
-                <p>A destruição das florestas impacta a biodiversidade, aumenta a poluição e reduz o contato com áreas verdes, afetando a
-                    saúde mental e respiratória.</p>
             </article>
 
             <a href="https://www.youtube.com/watch?v=ILh7nDEKGqc&pp=ygUXSW1wYWN0byBkbyBEZXNtYXRhbWVudG8%3D" class="cta-button" target="_blank">Como impacta o mundo? <i
