--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <section id="🌾 Panorama do Agronegócio Brasileiro (2024)" class="conteudo">
             <h2>Panorama</h2>
             <article>
-                <h3>Aumento das enchentes</h3>
-                <p>As árvores absorvem a água da chuva e ajudam na infiltração no solo. Sem vegetação, a água escoa rapidamente, causando
-                    enchentes.</p>
+                <h3>📈 Participação no PIB e Mercado de Trabalho</h3>
+                <p>Participação no PIB: Em 2024, o agronegócio representou aproximadamente 24,8% do PIB brasileiro, uma leve queda em relação aos 26,6% registrados em 2021. Essa diminuição reflete desafios como aumento nos custos de insumos e variações nos preços internacionais. 
+Geração de Empregos: No primeiro trimestre de 2024, o setor empregava 28,6 milhões de pessoas, correspondendo a 26,85% da força de trabalho nacional, com destaque para o crescimento no segmento de agrosserviços e maior formalização do emprego.</p>
             </article>
 
             <a href="https://www.youtube.com/watch?v=ILh7nDEKGqc&pp=ygUXSW1wYWN0byBkbyBEZXNtYXRhbWVudG8%3D" class="cta-button" target="_blank">Como impacta o mundo? <i
