--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         Abaixo, explico como o agro influencia a economia do Brasil de maneira ampla:</p>
         <nav>
             <ul>
-                <li><a href="🌾 Panorama Atual do Agronegócio Brasileiro (2025)">Panorama</a></li>
+                <li><a href="🌾 PIB do Brasil em 2024">PIB</a></li>
                 <li><a href="#consequencias">Consequências</a></li>
                 <li><a href="#conclusao">Conclusão</a></li>
             </ul>
@@ -32,12 +32,30 @@
 
 
     <main>
-        <section id="🌾 Panorama do Agronegócio Brasileiro (2024)" class="conteudo">
-            <h2>Panorama</h2>
+        <section id="🌾 PIB do Brasil em 2024" class="conteudo">
+            <h2>PIB</h2>
             <article>
-                <h3>📈 Participação no PIB e Mercado de Trabalho</h3>
-                <p>Participação no PIB: Em 2024, o agronegócio representou aproximadamente 24,8% do PIB brasileiro, uma leve queda em relação aos 26,6% registrados em 2021. Essa diminuição reflete desafios como aumento nos custos de insumos e variações nos preços internacionais.Geração de Empregos: 
-No primeiro trimestre de 2024, o setor empregava 28,6 milhões de pessoas, correspondendo a 26,85% da força de trabalho nacional, com destaque para o crescimento no segmento de agrosserviços e maior formalização do emprego.</p>
+                <h3>📈 Participação no PIB </h3>
+                <p>Crescimento e valores
+O PIB do Brasil em 2024 foi de R$ 11,7 trilhões, com um crescimento de 3,4% em relação a 20232.
+
+O PIB per capita atingiu R$ 55.247,45, um aumento real de 3,0%.
+
+No 4º trimestre de 2024, o PIB cresceu 0,2%, indicando uma desaceleração econômica nos meses finais do ano3.
+
+Setores que impulsionaram o crescimento
+Serviços: Crescimento de 3,7%, sendo o maior impulsionador do PIB.
+
+Indústria: Expansão de 3,3%, com destaque para a construção civil (+4,3%) e a indústria de transformação (+3,8%).
+
+Consumo das famílias: Alta de 4,8%, impulsionada por programas de transferência de renda e melhora no mercado de trabalho.
+
+Investimentos: Crescimento de 7,3%, com aumento na taxa de investimento para 17% do PIB.
+
+Desafios e quedas
+Agropecuária: Recuo de 3,2%, impactado por condições climáticas adversas e queda na produção de soja (-4,6%) e milho (-12,5%).
+
+Exportações: Crescimento de 2,9%, abaixo das expectativas.</p>
             </article>
 
             <a href="https://www.youtube.com/watch?v=ILh7nDEKGqc&pp=ygUXSW1wYWN0byBkbyBEZXNtYXRhbWVudG8%3D" class="cta-button" target="_blank">Como impacta o mundo? <i
