--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
              <img src="BRASIL-COLHEITA-.webp"
                 alt="Foto das Cataratas do Iguaçu, um lugar com muitas árvores e mata nativa preservada.">
         </div>
-        <p>O agronegócio (ou "agro") é um dos pilares da economia brasileira, sendo responsável por uma parcela significativa do PIB, das exportações e da geração de empregos. 
+        <p>O agronegócio é um dos pilares da economia brasileira, sendo responsável por uma parcela significativa do PIB, das exportações e da geração de empregos. 
         Abaixo, explico como o agro influencia a economia do Brasil de maneira ampla:</p>
         <nav>
             <ul>
@@ -58,7 +58,7 @@ Agropecuária: Recuo de 3,2%, impactado por condições climáticas adversas e q
 Exportações: Crescimento de 2,9%, abaixo das expectativas.</p>
             </article>
 
-            <a href="https://www.youtube.com/watch?v=ILh7nDEKGqc&pp=ygUXSW1wYWN0byBkbyBEZXNtYXRhbWVudG8%3D" class="cta-button" target="_blank">Como impacta o mundo? <i
+            <a href="https://youtu.be/WUtrZGXTY9Q" class="cta-button" target="_blank">Como impacta o mundo? <i
                     class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
         </section>
 
@@ -78,7 +78,7 @@ Exportações: Crescimento de 2,9%, abaixo das expectativas.</p>
             <h2>Conclusão</h2>
             <p>O desmatamento impacta diretamente a vida humana. Para evitar suas consequências, é necessário preservar o meio ambiente,
                 investir em reflorestamento e adotar práticas sustentáveis.</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ILh7nDEKGqc?si=feol6sZCHo1Cg-jQ" title="YouTube video.">
+            <iframe width="560" height="315" src="https://youtu.be/WUtrZGXTY9Q" title="YouTube video.">
         </section>
 
     </main>
