--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Agropecuária: Recuo de 3,2%, impactado por condições climáticas adversas e q
 Exportações: Crescimento de 2,9%, abaixo das expectativas.</p>
             </article>
 
-            <a href="https://youtu.be/WUtrZGXTY9Q" class="cta-button" target="_blank">Como impacta o mundo? <i
+            <a href="https://www.youtube.com/watch?v=WUtrZGXTY9Q" class="cta-button" target="_blank">Como impacta o mundo? <i
                     class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
         </section>
 
@@ -78,7 +78,7 @@ Exportações: Crescimento de 2,9%, abaixo das expectativas.</p>
             <h2>Conclusão</h2>
             <p>O desmatamento impacta diretamente a vida humana. Para evitar suas consequências, é necessário preservar o meio ambiente,
                 investir em reflorestamento e adotar práticas sustentáveis.</p>
-            <iframe width="560" height="315" src="https://youtu.be/WUtrZGXTY9Q" title="YouTube video.">
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=WUtrZGXTY9Q" title="YouTube video.">
         </section>
 
     </main>
