--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ Exportações: Crescimento de 2,9%, abaixo das expectativas.</p>
                     class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
         </section>
 
-        <section id="consequencias" class="conteudo">
-            <h2>Consequências</h2>
+        <section id="Geração de empregos" class="conteudo">
+            <h2>Geração de empregos</h2>
             <ul>
                 <li>Aumento das enchentes e erosão do solo</li>
                 <li>Aumento das temperaturas e mudanças climáticas</li>
