--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ Exportações: Crescimento de 2,9%, abaixo das expectativas.</p>
         <section id="Geração de empregos" class="conteudo">
             <h2>Geração de empregos</h2>
             <ul>
-                <li>Aumento das enchentes e erosão do solo</li>
-                <li>Aumento das temperaturas e mudanças climáticas</li>
+                <li>Setor de serviços: Maior responsável pela criação de empregos, com 128.354 novos postos em setembro</li>
+                <li></li>
                 <li>Perda da biodiversidade</li>
                 <li>Redução da qualidade de vida nas cidades</li>
                 <li>Agravamento de problemas de saúde</li>
