--- a/index.html
+++ b/index.html
@@ -66,18 +66,16 @@ Exportações: Crescimento de 2,9%, abaixo das expectativas.</p>
             <h2>Geração de empregos</h2>
             <ul>
                 <li>Setor de serviços: Maior responsável pela criação de empregos, com 128.354 novos postos em setembro</li>
-                <li></li>
-                <li>Perda da biodiversidade</li>
+                <li>Indústria: Expansão significativa, com 59.827 empregos gerados</li>
+                <li>egiões: O Sudeste liderou a geração de empregos, com 98.282 novas vagas, seguido pelo Nordeste (77.175) e Sul (38.140)</li>
                 <li>Redução da qualidade de vida nas cidades</li>
-                <li>Agravamento de problemas de saúde</li>
-                <li>Impacto na economia de comunidades locais</li>
+                <li>Carteira assinada: O Brasil atingiu um recorde de 47,49 milhões de trabalhadores formais, o maior número da história.</li>
             </ul>
         </section>
 
         <section id="conclusao" class="conteudo">
             <h2>Conclusão</h2>
-            <p>O desmatamento impacta diretamente a vida humana. Para evitar suas consequências, é necessário preservar o meio ambiente,
-                investir em reflorestamento e adotar práticas sustentáveis.</p>
+            <p>Em 2024, a economia brasileira mostrou crescimento sólido, impulsionado principalmente pelos setores de serviços e indústria, enquanto a agropecuária enfrentou desafios. O PIB cresceu 3,4%, alcançando R$ 11,7 trilhões, e a geração de empregos formais teve um saldo positivo, com 1,69 milhão de novas vagas ao longo do ano.</p>
             <iframe width="560" height="315" src="https://www.youtube.com/watch?v=WUtrZGXTY9Q" title="YouTube video.">
         </section>
 
