--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav>
             <ul>
                 <li><a href="🌾 PIB do Brasil em 2024">PIB</a></li>
-                <li><a href="#consequencias">Consequências</a></li>
+                <li><a href="#Geração de empregos">Geração de empregos</a></li>
                 <li><a href="#conclusao">Conclusão</a></li>
             </ul>
         </nav>
