--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Exportações: Crescimento de 2,9%, abaixo das expectativas.</p>
             <ul>
                 <li>Setor de serviços: Maior responsável pela criação de empregos, com 128.354 novos postos em setembro</li>
                 <li>Indústria: Expansão significativa, com 59.827 empregos gerados</li>
-                <li>egiões: O Sudeste liderou a geração de empregos, com 98.282 novas vagas, seguido pelo Nordeste (77.175) e Sul (38.140)</li>
+                <li>Regiões: O Sudeste liderou a geração de empregos, com 98.282 novas vagas, seguido pelo Nordeste (77.175) e Sul (38.140)</li>
                 <li>Redução da qualidade de vida nas cidades</li>
                 <li>Carteira assinada: O Brasil atingiu um recorde de 47,49 milhões de trabalhadores formais, o maior número da história.</li>
             </ul>
