--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Agropecuária: Recuo de 3,2%, impactado por condições climáticas adversas e q
 Exportações: Crescimento de 2,9%, abaixo das expectativas.</p>
             </article>
 
-            <a href="https://www.youtube.com/watch?v=WUtrZGXTY9Q" class="cta-button" target="_blank">Como impacta o mundo? <i
+            <a href="https://www.youtube.com/watch?v=WUtrZGXTY9Q" class="cta-button" target="_blank">Importância do Agronegócio. <i
                     class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
         </section>
 
